Disable service worker in development to fix hard refresh issue

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,9 +33,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
-    <!-- Service Worker Registration -->
+    <!-- Service Worker Registration (Production Only) -->
     <script>
-      if ('serviceWorker' in navigator) {
+      if ('serviceWorker' in navigator && import.meta.env.PROD) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('/sw.js')
             .then((registration) => {
@@ -44,6 +44,16 @@
             .catch((registrationError) => {
               console.log('SW registration failed: ', registrationError);
             });
+        });
+      }
+
+      // Unregister service worker in development
+      if ('serviceWorker' in navigator && !import.meta.env.PROD) {
+        navigator.serviceWorker.getRegistrations().then(function(registrations) {
+          for(let registration of registrations) {
+            registration.unregister();
+            console.log('SW unregistered for development');
+          }
         });
       }
     </script>
